# Air_Quality_station

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv
components/: README.md
doc/: README.md
doc/SquareLine_proj_files/: SquareLine_Project.sll  SquareLine_Project.spj
doc/how_to_basics/: README.md
doc/test/: co2_interpolation_test.py
flash_data/: README.md  index.html  upload_script.html
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/BME680/: BME680.c  BME680.h
main/captive_portal/: captive_portal.c
main/card_driver/: card_driver.c  card_driver.h
main/co2_sensor/: co2_sensor.c  co2_sensor.h
main/display_driver/: ST7789V3.c  ST7789V3.h
main/file_server/: file_server.c  file_server.h
main/i2c_driver/: i2c_driver.c  i2c_driver.h
main/i2cdev/: i2cdev.c  i2cdev.h
main/led_driver/: led_driver.c  led_driver.h
main/littlefs_driver/: local_flash.c  local_flash.h
main/lvgl_driver/: lvgl_driver.c  lvgl_driver.h
main/sensor_co2/: co2_sensor.c  co2_sensor.h
main/sensor_co2/scd4x/: scd4x.c
main/sensor_co2/sensiniron/: scd4x_i2c.c  scd4x_i2c.h  sensirion_common.c  sensirion_i2c.c  sensirion_i2c.h
main/sensor_temp/: bme680.c  bme680.h  temp_sensor.c  temp_sensor.h
main/sensor_temp/bme680/: bme680.c
main/sensor_temp/esp_bme680/: CMakeLists.txt  README.md  bme680.c  idf_component.yml  library.json
main/sensor_temp/esp_bme680/include/: bme680.h  bme680_version.h
main/sensor_temp/esp_type_utils/: idf_component.yml
main/sensor_temp/esp_type_utils/include/: type_utils_version.h
main/ui/: CMakeLists.txt  README.md  filelist.txt  ui.c  ui.h
main/ui/images/: ui_img_1678184450.c  ui_img_gauge_x16_png.c  ui_img_gauge_x32_png.c  ui_img_hot_to_cold_h90_png.c  ui_img_humidity_x16_png.c  ui_img_humidity_x32_png.c  ui_img_risk_165_142_png.c  ui_img_risk_256_png.c  ui_img_signal_x16_png.c  ui_img_thermometer_x16_png.c  ui_img_thermometer_x32_png.c  ui_img_wet_to_dry_h90_png.c  ui_img_wifi_x16_png.c
main/ui/screens/: ui_Screen1.c
main/webserver/: webserver.c  webserver.h
main/wifi/: wifi_ap.c  wifi_ap.h
sd_card/: README.md  index.txt
